# presentator

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  index.html  loc.sh  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wdio.conf.ts
docs/: app-icon.md  architecture.md  config-schema.md  features.md  global-config-schema.json  sidecar-config-schema.json  todo.md
e2e/: app.spec.ts  fixtures.ts  overlay-editor.spec.ts  rust-log.spec.ts
src/: App.css  App.test.tsx  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache_eviction.rs  lib.rs  main.rs  markdown.rs  overlay_cache.rs  svg_render.rs  thumbnail_cache.rs
src/components/: AboutDialog.test.tsx  AboutDialog.tsx  CanvasContextMenu.test.tsx  CanvasContextMenu.tsx  ConfigControls.test.tsx  ConfigControls.tsx  EditingCanvas.test.tsx  EditingCanvas.tsx  ElementPicker.test.tsx  ElementPicker.tsx  MarkdownEditorDialog.test.tsx  MarkdownEditorDialog.tsx  OverlayAlignWidget.tsx  OverlayList.test.tsx  OverlayList.tsx  PendingReloadIndicator.test.tsx  PendingReloadIndicator.tsx  PointerOverlay.test.tsx  PointerOverlay.tsx  PresentationCanvas.render.test.tsx  PresentationCanvas.test.ts  PresentationCanvas.tsx  ReloadNotification.test.tsx  ReloadNotification.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  StepList.test.tsx  StepList.tsx  SvgViewport.test.tsx  SvgViewport.tsx
src/hooks/: useFileWatcher.test.ts  useFileWatcher.ts  useOverlaySvgs.test.ts  useOverlaySvgs.ts  (+6 more)
(+17 files in other folders)
