[package]
name = "presentator"
version = "0.4.0"
description = "Interactive presentation app built from SVG input file and markdown snippets"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "presentator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
notify = "6"
pulldown-cmark = "0.13"
sha2 = "0.10"
typst = "0.14"
typst-as-lib = { version = "0.15", features = ["typst-kit-fonts"] }
typst-svg = "0.14"
